Replaced custom binary search by d3.bisector (+1 squashed commits)
Squashed commits:

[ff069d3] Inlined method no longer used in several places (+1 squashed commits)

Squashed commits:

[1b51852] Generate gradients with d3 instead of creating them in the html file (+1 squashed commits)

Squashed commits:

[4800700] Edge cases: empty highlight, empty highlight on max left, empty highlight on max right (+2 squashed commit)

Squashed commit:

[91500c5] Fix path height hack for Firefox

[3b1b140] cleaner fix for FF gradient (+3 squashed commit)

Squashed commit:

[1b0e537] Fix gradients for Firefox

[3ad9beb] Improve search algorithm from O(n) to O(log n)

[b02dcce] additional comment (+3 squashed commit)

Squashed commit:

[b02dcce] additional comment

[ea8d842] refactoring and less clean-up

[2bbf62c] Factorise decorateArea (+4 squashed commit)

Squashed commit:

[2bbf62c] Factorise decorateArea

[3f4f5d3] comment error

[24745fb] Gradients and control control size to ensure gradient consistency

[a620e9d] remove debug line (+3 squashed commit)

Squashed commit:

[24745fb] Gradients and control control size to ensure gradient consistency

[a620e9d] remove debug line

[8fefafa] performance and clean-up (+3 squashed commit)

Squashed commit:

[8fefafa] performance and clean-up

[c0e91ed] Added interpolation of points under the box borders

[f1b0469] Initial implementation (+1 squashed commits)

Squashed commits:

[f1b0469] Initial implementation

--- a/src/assets/styles/navigator.less
+++ b/src/assets/styles/navigator.less
@@ -4,9 +4,8 @@
     margin-right: 0 !important;
 
     .extent {
-      fill: @navigator-extent-colour;
+      fill: none;
       stroke: @navigator-selection-border-colour;
-      fill-opacity: 0.125;
       shape-rendering: crispEdges;
     }
 
@@ -20,6 +19,12 @@
       .multi {
         .area {
           fill: @gridline-colour;
+          &.highlight {
+              fill: url('/#gradient-highlight');
+          }
+          &.unselected {
+              fill: url('/#gradient-unselected');
+          }
         }
         path {
           stroke: @navigator-colour;
@@ -31,6 +36,19 @@
     text {
       font-size: @font-size-base;
       fill: @font-colour;
+    }
+
+    #gradient-highlight-top {
+        stop-color: @secondary-orange;
+    }
+    #gradient-highlight-bottom {
+        stop-color: lighten(@secondary-orange, 30%);
+    }
+    #gradient-unselected-top {
+        stop-color: @secondary-grey;
+    }
+    #gradient-unselected-bottom {
+        stop-color: lighten(@secondary-grey, 30%);
     }
   }
 
