refactoring and less clean-up

--- a/src/assets/styles/navigator.less
+++ b/src/assets/styles/navigator.less
@@ -4,9 +4,8 @@
     margin-right: 0 !important;
 
     .extent {
-      fill: @navigator-extent-colour;
+      fill: none;
       stroke: @navigator-selection-border-colour;
-      fill-opacity: 0;
       shape-rendering: crispEdges;
     }
 
