cleaner fix for FF gradient

--- a/src/assets/styles/navigator.less
+++ b/src/assets/styles/navigator.less
@@ -19,6 +19,12 @@
       .multi {
         .area {
           fill: @gridline-colour;
+          &.highlight {
+              fill: url('/#gradient-highlight');
+          }
+          &.unselected {
+              fill: url('/#gradient-unselected');
+          }
         }
         path {
           stroke: @navigator-colour;
