Generate gradients with d3 instead of creating them in the html file

--- a/src/assets/styles/navigator.less
+++ b/src/assets/styles/navigator.less
@@ -38,16 +38,16 @@
       fill: @font-colour;
     }
 
-    #stopHighlightTop {
+    #gradient-highlight-top {
         stop-color: @secondary-orange;
     }
-    #stopHighlightBottom {
+    #gradient-highlight-bottom {
         stop-color: lighten(@secondary-orange, 30%);
     }
-    #stopUnselectedTop {
+    #gradient-unselected-top {
         stop-color: @secondary-grey;
     }
-    #stopUnselectedBottom {
+    #gradient-unselected-bottom {
         stop-color: lighten(@secondary-grey, 30%);
     }
   }
